--- a/index.html
+++ b/index.html
@@ -27,13 +27,24 @@
             development, including HTML5, CSS, JavaScript and React. I also bring experience in
             backend development using the .NET framework and Java, as well as proficiency in cloud platforms like Azure
             and AWS. My diverse skill set enables me to develop efficient, scalable, and innovative web solutions.<br>
-            <a href="https://www.linkedin.com/in/bhagya-m-collas-668b38283/" target="_blank">LinkedIn</a></p>
+            <a href="https://www.linkedin.com/in/bhagya-m-collas-668b38283/" target="_blank">LinkedIn</a>
+        </p>
     </section>
 
     <section id="projects">
-        <h2>Responsive Static Website Project</h2>
+        <h2>Projects</h2>
         <div class="project">
-            <h3>Portfolio Website</h3>
+            <h3>Online Electronic Exercise Website</h3>
+            <p>This is an ongoing project,part of my practical training at JAMK University of Applied Sciences, under
+                the guidance of Jussi Ahonen, Senior Lecturer. The project involves developing an Online Electronic
+                Exercise Website
+                aimed at facilitating interactive and dynamic electronic exercises.In here I m using HTML,CSS,javascript
+                and react to design the webpage.The Online Electronic Exercise Website is designed to provide a platform
+                for users to engage in electronic exercises seamlessly. The exercises and their structure are based on
+                templates and formats provided by Jussi Ahonen in Excel files. My contribution to this project involves
+                translating these templates into a functional and user-friendly web design.</p>
+            <a href="https://bhagya-tech-2024.github.io/Online-Exercise-for-Electricity/" target="_blank">GitHub</a>
+            <h3>Responsive Website</h3>
             <p>This project is a responsive static website created as the final assignment for Web Visualization,
                 hosted on GitLab Pages to showcase static content. The primary focus is on implementing a professional,
                 visually appealing, and fully responsive design using a CSS library or framework, ensuring compatibility
@@ -42,6 +53,25 @@
                 enhance design and layout consistency. Git was used throughout the development process to manage version
                 control, emphasizing the importance of responsive design and adherence to course requirements.</p>
             <a href="https://bhagya-tech-2024.github.io/Web-Visualization/" target="_blank">GitHub</a>
+            <h3>Smart Car Project with Raspberry Pi</h3>
+            <p>My group partner and I worked together to create a smart car powered by a Raspberry Pi. We combined
+                hardware and software to enable features like remote control, sensor based navigation, and real-time
+                data processing. This project gave me hands-on experience with IoT and embedded systems while also
+                strengthening my teamwork and problem solving skills. It was an exciting opportunity to explore how
+                Raspberry Pi can be used in automation and robotics.</p>
+            <a href="https://github.com/Bhagya-tech-2024/IOT-Technology/tree/main" target="_blank">GitHub</a>
+            <h3>Visualization of the Mountain Car Problem</h3>
+            <p>The visualization of the Mountain Car problem demonstrates how a car, starting at the bottom of a valley,
+                learns to reach a goal at the top of a hill. Since the car's engine isn't powerful enough to climb the
+                hill directly, it must swing back and forth to build enough momentum to reach the flag at the top.
+                Through reinforcement learning, the car gradually learns to time its movements, use gravity to its
+                advantage, and make the most of its swings. As the episodes progress, the car becomes more efficient,
+                with earlier swings helping it gather momentum for the final push. Some episodes take fewer swings,
+                while others may require more time and different strategies to succeed. The goal is reached when the car
+                reaches position 0.5, and the faster it does so, the more efficient the solution. This process
+                highlights how the car learns not just to move, but to plan and manage its momentum to solve a
+                challenging problem</p>
+            <a href="https://github.com/Bhagya-tech-2024/Mountain-Car-Problem" target="_blank">GitHub</a>
         </div>
     </section>
 
@@ -49,9 +79,11 @@
         <h2>Certifications</h2>
         <ul>
             <li><a href="https://learn.microsoft.com/api/achievements/share/en-us/CollasBhagya-0779/UFAYL5B3?sharingId=E2C8673748B9BAB9"
-                    target="_blank">Azure Certification | Describe the core architectural components of Azure | - Verified</a></li>
+                    target="_blank">Azure Certification | Describe the core architectural components of Azure | -
+                    Verified</a></li>
             <li><a href="https://learn.microsoft.com/api/achievements/share/en-us/CollasBhagya-0779/HYZ7CBR8?sharingId=E2C8673748B9BAB9"
-                    target="_blank">Azure Certification | Microsoft Azure Fundamentals: Describe Azure architecture and services | - Verified</a></li>
+                    target="_blank">Azure Certification | Microsoft Azure Fundamentals: Describe Azure architecture and
+                    services | - Verified</a></li>
             <li><a href="https://www.credly.com/badges/59387dc2-dac9-47ea-a406-7259eca82a52/public_url"
                     target="_blank">AWS Certification | AWS Educate Getting Started with Storage | - Verified</a></li>
             <li><a href="https://www.credly.com/badges/afca806b-922b-4fae-afdb-046d4b35c93a/public_url"
@@ -69,6 +101,8 @@
             <li>Azure, AWS</li>
             <li>Git, Version Control</li>
             <li>Responsive Web Design</li>
+            <li>Application Development</li>
+            <li>SQL</li>
             <li>Problem sloving & strong Communication</Strong></li>
         </ul>
     </section>
@@ -79,7 +113,7 @@
         <p><strong>Institution:</strong> JAMK University of Applied Sciences</p>
         <p><strong>Year:</strong>2022 - Currently</p>
         <a href="Transcript.pdf" target="_blank">Transcript</a>
-        
+
     </section>
 
     <footer>
