updated my new skills

--- a/index.html
+++ b/index.html
@@ -23,10 +23,15 @@
 
     <section id="about">
         <h2>About Me</h2>
-        <p>I am a third-year ICT student at JAMK University of Applied Sciences with a strong foundation in web
-            development, including HTML5, CSS, JavaScript and React. I also bring experience in
-            backend development using the .NET framework and Java, as well as proficiency in cloud platforms like Azure
-            and AWS. My diverse skill set enables me to develop efficient, scalable, and innovative web solutions.<br>
+        <p>
+            I am a third-year ICT student at JAMK University of Applied Sciences with a strong foundation in web development, including 
+            <strong>HTML5</strong>, <strong>CSS</strong>, <strong>JavaScript</strong>, and <strong>React</strong>. I also bring experience in backend development using the 
+            <strong>.NET framework</strong> and <strong>Java</strong>, as well as proficiency in cloud platforms like <strong>Azure</strong> and <strong>AWS</strong>. 
+            Additionally, I have <strong>mobile application development skills</strong>, particularly in <strong>Android</strong>, and 
+            <strong>project management experience</strong>, which have helped me efficiently coordinate and deliver projects. I am currently expanding my expertise by 
+            following a <strong>data analysis module</strong> that covers <strong>machine learning</strong>, <strong>deep learning</strong>, and <strong>data processing</strong>. 
+            My diverse skill set enables me to develop efficient, scalable, and innovative web and mobile solutions.
+        <br>
             <a href="https://www.linkedin.com/in/bhagya-m-collas-668b38283/" target="_blank">LinkedIn</a>
         </p>
     </section>
@@ -34,7 +39,7 @@
     <section id="projects">
         <h2>Projects</h2>
         <div class="project">
-            <h3>Online Electronic Exercise Website</h3>
+            <h3>Web Developer Role : Online Electronic Exercise Website</h3>
             <p>This is an ongoing project,part of my practical training at JAMK University of Applied Sciences, under
                 the guidance of Jussi Ahonen, Senior Lecturer. The project involves developing an Online Electronic
                 Exercise Website
@@ -103,6 +108,7 @@
             <li>Responsive Web Design</li>
             <li>Application Development</li>
             <li>SQL</li>
+            <li>Data Analysis</li>
             <li>Problem sloving & strong Communication</Strong></li>
         </ul>
     </section>
