--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
     <header>
         <h1>Bhagya Collas</h1>
+        <img src="image.jpg" alt="Your Name" class="profile-image">
         <p>Student - ICT Engineering</p>
         <nav>
             <a href="#about">About</a>
