--- a/index.html
+++ b/index.html
@@ -25,13 +25,11 @@
     <section id="about">
         <h2>About Me</h2>
         <p>
-            I am a third-year ICT student at JAMK University of Applied Sciences with a strong foundation in web development, including 
-            <strong>HTML5</strong>, <strong>CSS</strong>, <strong>JavaScript</strong>, and <strong>React</strong>. I also bring experience in backend development using the 
-            <strong>.NET framework</strong> and <strong>Java</strong>, as well as proficiency in cloud platforms like <strong>Azure</strong> and <strong>AWS</strong>. 
-            Additionally, I have <strong>mobile application development skills</strong>, particularly in <strong>Android</strong>, and 
-            <strong>project management experience</strong>, which have helped me efficiently coordinate and deliver projects. I am currently expanding my expertise by 
-            following a <strong>data analysis module</strong> that covers <strong>machine learning</strong>, <strong>deep learning</strong>, and <strong>data processing</strong>. 
-            My diverse skill set enables me to develop efficient, scalable, and innovative web and mobile solutions.
+            I am a fourth-year ICT student at JAMK University of Applied Sciences with a strong foundation in web development, including <strong>HTML5</strong>, <strong>CSS</strong>, <strong>JavaScript</strong>, and <strong>React</strong>. I have 6 months of professional web development experience, along with 1.5 years of IT support and over 5 years in customer service, equipping me with strong problem-solving, communication, and user-centered design skills.
+
+I also bring experience in backend development using the <strong>.NET framework</strong> and <strong>Java</strong>, and I’m proficient in cloud platforms like <strong>Azure</strong> and <strong>AWS</strong>. My <strong>mobile application development skills</strong> focus primarily on <strong>Android</strong>. In addition, I have <strong>project management experience</strong>, allowing me to coordinate and deliver successful team projects. I am currently expanding my knowledge through a <strong>data analysis module</strong>, which covers <strong>machine learning</strong>, <strong>deep learning</strong>, and <strong>data processing</strong>.
+
+My diverse technical and customer-facing background enables me to develop efficient, scalable, and innovative web and mobile solutions.
         <br>
             <a href="https://www.linkedin.com/in/bhagya-m-collas-668b38283/" target="_blank">LinkedIn</a>
         </p>
@@ -100,17 +98,17 @@
     </section>
 
     <section id="skills">
-        <h2>My Skills</h2>
+        <h2>Technical Skills</h2>
         <ul>
-            <li>HTML5, CSS3, JavaScript</li>
+            <li>HTML, CSS, JavaScript</li>
             <li>React, React Native</li>
-            <li>Azure, AWS</li>
-            <li>Git, Version Control</li>
+            <li>Node.js & Python</li>
+            <li>Git, GitHub</li>
             <li>Responsive Web Design</li>
-            <li>Application Development</li>
-            <li>SQL</li>
-            <li>Data Analysis</li>
-            <li>Problem sloving & strong Communication</Strong></li>
+            <li>Android & Mobile Development</li>
+            <li>Basic Linux</li>
+            <li>Powershell & Bash</li>
+            <li>Microsoft 365 / Office 365</Strong></li>
         </ul>
     </section>
 
