--- a/index.html
+++ b/index.html
@@ -25,12 +25,23 @@
     <section id="about">
         <h2>About Me</h2>
         <p>
-            I am a fourth-year ICT student at JAMK University of Applied Sciences with a strong foundation in web development, including <strong>HTML5</strong>, <strong>CSS</strong>, <strong>JavaScript</strong>, and <strong>React</strong>. I have 6 months of professional web development experience, along with 1.5 years of IT support and over 5 years in customer service, equipping me with strong problem-solving, communication, and user-centered design skills.
+            I am a fourth-year ICT student at JAMK University of Applied Sciences with a strong foundation in web
+            development, including <strong>HTML5</strong>, <strong>CSS</strong>, <strong>JavaScript</strong>, and
+            <strong>React</strong>. I have 6 months of professional web development experience, along with 1.5 years of
+            IT support and over 5 years in customer service, equipping me with strong problem-solving, communication,
+            and user-centered design skills.
 
-I also bring experience in backend development using the <strong>.NET framework</strong> and <strong>Java</strong>, and I’m proficient in cloud platforms like <strong>Azure</strong> and <strong>AWS</strong>. My <strong>mobile application development skills</strong> focus primarily on <strong>Android</strong>. In addition, I have <strong>project management experience</strong>, allowing me to coordinate and deliver successful team projects. I am currently expanding my knowledge through a <strong>data analysis module</strong>, which covers <strong>machine learning</strong>, <strong>deep learning</strong>, and <strong>data processing</strong>.
+            I also bring experience in backend development using the <strong>.NET framework</strong> and
+            <strong>Java</strong>, and I’m proficient in cloud platforms like <strong>Azure</strong> and
+            <strong>AWS</strong>. My <strong>mobile application development skills</strong> focus primarily on
+            <strong>Android</strong>. In addition, I have <strong>project management experience</strong>, allowing me to
+            coordinate and deliver successful team projects. I am currently expanding my knowledge through a
+            <strong>data analysis module</strong>, which covers <strong>machine learning</strong>, <strong>deep
+                learning</strong>, and <strong>data processing</strong>.
 
-My diverse technical and customer-facing background enables me to develop efficient, scalable, and innovative web and mobile solutions.
-        <br>
+            My diverse technical and customer-facing background enables me to develop efficient, scalable, and
+            innovative web and mobile solutions.
+            <br>
             <a href="https://www.linkedin.com/in/bhagya-m-collas-668b38283/" target="_blank">LinkedIn</a>
         </p>
     </section>
@@ -38,8 +49,13 @@ My diverse technical and customer-facing background enables me to develop effici
     <section id="projects">
         <h2>Projects</h2>
         <div class="project">
+            <h3>DevOps Engineer - Future Factory Project</h3>
+            <p>Contributed to development and deployment tasks in the OPF project, supporting secure and efficient
+                delivery through GitLab CI/CD pipelines and GitLab Pages. Maintained automation workflows, supported
+                Dockerized environments, and handled cross-functional responsibilities as a generalist</p>
+            <a href="https://it-ff-2025-t05.pages.labranet.jamk.fi/core/" target="_blank">Project OPF</a>
             <h3>Web Developer Role : Online Electronic Exercise Website</h3>
-            <p>This is an ongoing project,part of my practical training at JAMK University of Applied Sciences, under
+            <p>This is part of my practical training at JAMK University of Applied Sciences, under
                 the guidance of Jussi Ahonen, Senior Lecturer. The project involves developing an Online Electronic
                 Exercise Website
                 aimed at facilitating interactive and dynamic electronic exercises.In here I m using HTML,CSS,javascript
