--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
         <p><strong>Program:</strong> Bachelor of Engineering in ICT</p>
         <p><strong>Institution:</strong> JAMK University of Applied Sciences</p>
         <p><strong>Year:</strong>2022 - Currently</p>
-        <a href="Transcript.pdf" target="_blank">Transcript</a>
+        <a href="Degree_Certificate.pdf" target="_blank">Degree_Certificate</a>
 
     </section>
 
