--- a/index.html
+++ b/index.html
@@ -4,144 +4,152 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bhagya Collas | Portfolio</title>
+    <title>Bhagya Collas | ICT Engineer</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
+
+    <div class="animated-bg"></div>
+
     <header>
-        <h1>Bhagya Collas</h1>
-        <img src="image.jpg" alt="Your Name" class="profile-image">
-        <p>Student - ICT Engineering</p>
+        <div class="profile-container">
+            <img src="image.jpg" alt="Bhagya Collas" class="profile-image">
+            <div>
+                <h1>Bhagya Collas</h1>
+                <p><strong>ICT Engineer (B.Eng) | IT Support | Cloud & DevOps Enthusiast | Web Developer </strong></p>
+                <p>Graduated December 2025 | GPA: 3.88 / 5.0 | 263 ECTS Credits</p>
+            </div>
+        </div>
+
         <nav>
             <a href="#about">About</a>
+            <a href="#experience">Experience</a>
             <a href="#projects">Projects</a>
-            <a href="#certifications">Certifications</a>
             <a href="#skills">Skills</a>
-            <a href="#transcript">Transcript</a>
+            <a href="#education">Education</a>
+            <a href="#contact">Contact</a>
         </nav>
     </header>
 
+    <!-- ABOUT -->
     <section id="about">
-        <h2>About Me</h2>
+        <h2>Professional Summary</h2>
         <p>
-            I am a fourth-year ICT student at JAMK University of Applied Sciences with a strong foundation in web
-            development, including <strong>HTML5</strong>, <strong>CSS</strong>, <strong>JavaScript</strong>, and
-            <strong>React</strong>. I have 6 months of professional web development experience, along with 1.5 years of
-            IT support and over 5 years in customer service, equipping me with strong problem-solving, communication,
-            and user-centered design skills.
-
-            I also bring experience in backend development using the <strong>.NET framework</strong> and
-            <strong>Java</strong>, and I’m proficient in cloud platforms like <strong>Azure</strong> and
-            <strong>AWS</strong>. My <strong>mobile application development skills</strong> focus primarily on
-            <strong>Android</strong>. In addition, I have <strong>project management experience</strong>, allowing me to
-            coordinate and deliver successful team projects. I am currently expanding my knowledge through a
-            <strong>data analysis module</strong>, which covers <strong>machine learning</strong>, <strong>deep
-                learning</strong>, and <strong>data processing</strong>.
-
-            My diverse technical and customer-facing background enables me to develop efficient, scalable, and
-            innovative web and mobile solutions.
-            <br>
-            <a href="https://www.linkedin.com/in/bhagya-m-collas-668b38283/" target="_blank">LinkedIn</a>
+            Results-driven ICT Engineer (B.Eng) graduated from JAMK University of Applied Sciences with a 3.88 GPA.
+            Experienced in full-stack development, cloud technologies, and DevOps practices. 
+            Skilled in building scalable web and mobile applications using React, .NET, Java, and modern cloud platforms 
+            including Azure and AWS. Strong background in IT support and customer service, bringing excellent 
+            communication, teamwork, and problem-solving abilities to technical environments.
         </p>
     </section>
 
-    <section id="projects">
-        <h2>Projects</h2>
-        <div class="project">
-            <h3>DevOps Engineer - Future Factory Project</h3>
-            <p>Contributed to development and deployment tasks in the OPF project, supporting secure and efficient
-                delivery through GitLab CI/CD pipelines and GitLab Pages. Maintained automation workflows, supported
-                Dockerized environments, and handled cross-functional responsibilities as a generalist</p>
-            <a href="https://it-ff-2025-t05.pages.labranet.jamk.fi/core/" target="_blank">Project OPF</a>
-            <h3>Web Developer Role : Online Electronic Exercise Website</h3>
-            <p>This is part of my practical training at JAMK University of Applied Sciences, under
-                the guidance of Jussi Ahonen, Senior Lecturer. The project involves developing an Online Electronic
-                Exercise Website
-                aimed at facilitating interactive and dynamic electronic exercises.In here I m using HTML,CSS,javascript
-                and react to design the webpage.The Online Electronic Exercise Website is designed to provide a platform
-                for users to engage in electronic exercises seamlessly. The exercises and their structure are based on
-                templates and formats provided by Jussi Ahonen in Excel files. My contribution to this project involves
-                translating these templates into a functional and user-friendly web design.</p>
-            <a href="https://bhagya-tech-2024.github.io/Online-Exercise-for-Electricity/" target="_blank">GitHub</a>
-            <h3>Responsive Website</h3>
-            <p>This project is a responsive static website created as the final assignment for Web Visualization,
-                hosted on GitLab Pages to showcase static content. The primary focus is on implementing a professional,
-                visually appealing, and fully responsive design using a CSS library or framework, ensuring compatibility
-                across mobile, tablet, and desktop devices. The website features a multi-page layout with consistent
-                navigation and is styled using [insert CSS library/framework name] (e.g. Bootstrap) to
-                enhance design and layout consistency. Git was used throughout the development process to manage version
-                control, emphasizing the importance of responsive design and adherence to course requirements.</p>
-            <a href="https://bhagya-tech-2024.github.io/Web-Visualization/" target="_blank">GitHub</a>
-            <h3>Smart Car Project with Raspberry Pi</h3>
-            <p>My group partner and I worked together to create a smart car powered by a Raspberry Pi. We combined
-                hardware and software to enable features like remote control, sensor based navigation, and real-time
-                data processing. This project gave me hands-on experience with IoT and embedded systems while also
-                strengthening my teamwork and problem solving skills. It was an exciting opportunity to explore how
-                Raspberry Pi can be used in automation and robotics.</p>
-            <a href="https://github.com/Bhagya-tech-2024/IOT-Technology/tree/main" target="_blank">GitHub</a>
-            <h3>Visualization of the Mountain Car Problem</h3>
-            <p>The visualization of the Mountain Car problem demonstrates how a car, starting at the bottom of a valley,
-                learns to reach a goal at the top of a hill. Since the car's engine isn't powerful enough to climb the
-                hill directly, it must swing back and forth to build enough momentum to reach the flag at the top.
-                Through reinforcement learning, the car gradually learns to time its movements, use gravity to its
-                advantage, and make the most of its swings. As the episodes progress, the car becomes more efficient,
-                with earlier swings helping it gather momentum for the final push. Some episodes take fewer swings,
-                while others may require more time and different strategies to succeed. The goal is reached when the car
-                reaches position 0.5, and the faster it does so, the more efficient the solution. This process
-                highlights how the car learns not just to move, but to plan and manage its momentum to solve a
-                challenging problem</p>
-            <a href="https://github.com/Bhagya-tech-2024/Mountain-Car-Problem" target="_blank">GitHub</a>
-        </div>
-    </section>
+    <!-- EXPERIENCE -->
+    <section id="experience">
+        <h2>Professional Experience</h2>
 
-    <section id="certifications">
-        <h2>Certifications</h2>
+        <h3>Web Developer (6 Months)</h3>
         <ul>
-            <li><a href="https://learn.microsoft.com/api/achievements/share/en-us/CollasBhagya-0779/UFAYL5B3?sharingId=E2C8673748B9BAB9"
-                    target="_blank">Azure Certification | Describe the core architectural components of Azure | -
-                    Verified</a></li>
-            <li><a href="https://learn.microsoft.com/api/achievements/share/en-us/CollasBhagya-0779/HYZ7CBR8?sharingId=E2C8673748B9BAB9"
-                    target="_blank">Azure Certification | Microsoft Azure Fundamentals: Describe Azure architecture and
-                    services | - Verified</a></li>
-            <li><a href="https://www.credly.com/badges/59387dc2-dac9-47ea-a406-7259eca82a52/public_url"
-                    target="_blank">AWS Certification | AWS Educate Getting Started with Storage | - Verified</a></li>
-            <li><a href="https://www.credly.com/badges/afca806b-922b-4fae-afdb-046d4b35c93a/public_url"
-                    target="_blank">AWS Certification | AWS Educate Introduction to Cloud 101 | - Verified</a></li>
-            <li><a href="https://www.credly.com/badges/2474eb33-c0fd-423c-99f6-3829003a2524/public_url"
-                    target="_blank">AWS Certification | AWS Educate Getting Started with Compute | - Verified</a></li>
+            <li>Developed responsive web applications using HTML, CSS, JavaScript, and React.</li>
+            <li>Collaborated in agile teams to deliver functional and user-friendly solutions.</li>
+            <li>Integrated backend services and improved UI performance.</li>
+        </ul>
+
+        <h3>IT Support Specialist (1.5 Years)</h3>
+        <ul>
+            <li>Provided technical troubleshooting for hardware, software, and network issues.</li>
+            <li>Supported Microsoft 365 and enterprise systems.</li>
+            <li>Improved system reliability and end-user satisfaction.</li>
+        </ul>
+
+        <h3>Customer Service Professional (5+ Years)</h3>
+        <ul>
+            <li>Delivered high-quality customer support in fast-paced environments.</li>
+            <li>Developed strong communication and client management skills.</li>
         </ul>
     </section>
 
+    <!-- PROJECTS -->
+    <section id="projects">
+        <h2>Selected Projects</h2>
+
+        <h3>DevOps Engineer – Future Factory Project</h3>
+        <p><strong>Technologies:</strong> GitLab CI/CD, Docker, Linux</p>
+        <p>
+            Implemented automated CI/CD pipelines and maintained Dockerized environments to ensure
+            secure and efficient deployment workflows. Supported cross-functional DevOps operations.
+        </p>
+        <a href="https://it-ff-2025-t05.pages.labranet.jamk.fi/core/" target="_blank">View Project</a>
+
+        <h3>Online Electronic Exercise Platform</h3>
+        <p><strong>Technologies:</strong> HTML, CSS, JavaScript, React</p>
+        <p>
+            Developed an interactive web platform transforming structured Excel-based exercise templates
+            into dynamic digital exercises. Focused on usability and responsive design.
+        </p>
+        <a href="https://bhagya-tech-2024.github.io/Online-Exercise-for-Electricity/" target="_blank">GitHub</a>
+
+        <h3>Smart Car with Raspberry Pi</h3>
+        <p><strong>Technologies:</strong> Raspberry Pi, IoT, Sensors</p>
+        <p>
+            Designed and developed a smart car with remote control and sensor-based navigation.
+            Gained hands-on experience in embedded systems and automation.
+        </p>
+        <a href="https://github.com/Bhagya-tech-2024/IOT-Technology/tree/main" target="_blank">GitHub</a>
+
+        <h3>Mountain Car Reinforcement Learning Visualization</h3>
+        <p><strong>Technologies:</strong> Python, Machine Learning</p>
+        <p>
+            Visualized reinforcement learning strategies demonstrating how an agent optimizes
+            movement to reach a goal efficiently using momentum-based learning.
+        </p>
+        <a href="https://github.com/Bhagya-tech-2024/Mountain-Car-Problem" target="_blank">GitHub</a>
+
+    </section>
+
+    <!-- SKILLS -->
     <section id="skills">
         <h2>Technical Skills</h2>
-        <ul>
-            <li>HTML, CSS, JavaScript</li>
-            <li>React, React Native</li>
-            <li>Node.js & Python</li>
-            <li>Git, GitHub</li>
-            <li>Responsive Web Design</li>
-            <li>Android & Mobile Development</li>
-            <li>Basic Linux</li>
-            <li>Powershell & Bash</li>
-            <li>Microsoft 365 / Office 365</Strong></li>
-        </ul>
+
+        <p><strong>Frontend:</strong> HTML5, CSS3, JavaScript, React</p>
+        <p><strong>Backend:</strong> .NET, Java, Node.js, Python</p>
+        <p><strong>Cloud Platforms:</strong> Microsoft Azure, AWS</p>
+        <p><strong>DevOps & Tools:</strong> Git, GitHub, GitLab CI/CD, Docker, Linux</p>
+        <p><strong>Mobile Development:</strong> Android</p>
+        <p><strong>Other:</strong> Microsoft 365, PowerShell, Bash</p>
     </section>
 
-    <section id="transcript">
-        <h2>Transcript</h2>
-        <p><strong>Program:</strong> Bachelor of Engineering in ICT</p>
-        <p><strong>Institution:</strong> JAMK University of Applied Sciences</p>
-        <p><strong>Year:</strong>2022 - Currently</p>
-        <a href="Degree_Certificate.pdf" target="_blank">Degree_Certificate</a>
+    <!-- EDUCATION -->
+    <section id="education">
+        <h2>Education</h2>
+        <p><strong>Bachelor of Engineering (B.Eng), Information and Communication Technology</strong></p>
+        <p>JAMK University of Applied Sciences</p>
+        <p>Graduated: December 2025</p>
+        <p><strong>GPA:</strong> 3.88 / 5.0</p>
+        <p><strong>Total Credits:</strong> 263 ECTS</p>
+    </section>
 
+    <!-- CONTACT -->
+    <section id="contact">
+        <h2>Contact</h2>
+        <p>Email: your.email@example.com</p>
+        <p>
+            LinkedIn:
+            <a href="https://www.linkedin.com/in/bhagya-m-collas-668b38283/" target="_blank">
+                linkedin.com/in/bhagya-m-collas
+            </a>
+        </p>
+        <p>
+            GitHub:
+            <a href="https://github.com/Bhagya-tech-2024" target="_blank">
+                github.com/Bhagya-tech-2024
+            </a>
+        </p>
     </section>
 
     <footer>
-        <p> Bhagya Collas | All Rights Reserved</p>
+        <p>© 2026 Bhagya Collas | ICT Engineer | All Rights Reserved</p>
     </footer>
 
-    <script src="script.js"></script>
 </body>
-
 </html>
